@@ -1,3 +1,10 @@
+Development Portal (2021-07-24 shi)
+==============================
+Add stats link to d-preview
+Update d-preview footer layout
+Update d-preview css
+
+
 Development Portal (2021-06-24 shi)
 ==============================
 Update csv download description for aid
